feat: Add a manual gRPC client test script and increment the project version.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,5 @@
 testpaths = tests
 python_files = test_*.py
 norecursedirs = server build .venv .git js scripts
-addopts = -v -p no:warnings --ignore=__init__.py
+addopts = -v -p no:warnings --ignore=__init__.py --ignore=tests/test_client.py
 importmode = importlib
